--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A Demo.",
   "main": "src/index.js",
   "scripts": {
-    "build:index": "cross-env ENTRY=index ENTRY_PATH=./src/pages/index/ webpack --config webpack.config.js",
-    "build:tiny": "cross-env ENTRY=tiny ENTRY_PATH=./src/pages/tiny/ webpack --config webpack.config.js",
+    "build:index": "cross-env ENTRY=index webpack --config webpack.config.js",
+    "build:tiny": "cross-env ENTRY=tiny webpack --config webpack.config.js",
+    "build:cdn": "cross-env ENTRY=cdn webpack --config webpack.config.js",
     "lint-and-fix": "eslint ./src/**/*.js --ext 'js' --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "mazey": "^3.3.4",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0"
