--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "javascript-obfuscator": "^4.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-obfuscator": "^3.5.1"
   },
   "dependencies": {
     "axios": "^1.1.3",
