--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A Demo.",
   "main": "src/index.js",
   "scripts": {
-    "build:index": "cross-env ENTRY=index webpack --config webpack.config.js",
-    "build:tiny": "cross-env ENTRY=tiny webpack --config webpack.config.js",
-    "build:cdn": "cross-env ENTRY=cdn webpack --config webpack.config.js",
-    "build:obfuscator": "cross-env ENTRY=obfuscator webpack --config webpack.config.js",
+    "build:index": "cross-env ENTRY=index webpack --config webpack.config.prd.js",
+    "serve:tiny": "cross-env ENTRY=tiny webpack-dev-server --config webpack.config.dev.js --open",
+    "build:tiny": "cross-env ENTRY=tiny webpack --config webpack.config.prd.js",
+    "build:cdn": "cross-env ENTRY=cdn webpack --config webpack.config.prd.js",
+    "build:obfuscator": "cross-env ENTRY=obfuscator webpack --config webpack.config.prd.js",
     "lint-and-fix": "eslint ./src/**/*.js --ext 'js' --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -48,6 +49,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0",
     "webpack-obfuscator": "^3.5.1"
   },
   "dependencies": {
