--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build:index": "cross-env ENTRY=index webpack --config webpack.config.prd.js",
+    "build:wordpress": "cross-env ENTRY=wordpress webpack --config webpack.config.prd.js",
     "serve:tiny": "cross-env ENTRY=tiny webpack-dev-server --config webpack.config.dev.js --open",
     "build:tiny": "cross-env ENTRY=tiny webpack --config webpack.config.prd.js",
     "build:cdn": "cross-env ENTRY=cdn webpack --config webpack.config.prd.js",
@@ -55,7 +56,9 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "fingerprintjs2": "^2.1.4",
     "mazey": "^3.5.2",
+    "mazey-wordpress-utils": "^1.0.3",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
