feat: QRCode module
Add the QRCode module for the tiny link.

Close #24

--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "fingerprintjs2": "^2.1.4",
     "mazey": "^3.5.4",
     "mazey-wordpress-utils": "^1.2.0",
+    "qr-code-styling": "^1.6.0-rc.1",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
