docs: update information
Update copyright and author information

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "url": "git+https://github.com/mazeyqian/webpack-build-demo.git"
   },
   "author": {
-    "name": "Mazey Chu",
+    "name": "Cheng",
     "email": "mazeyqian@gmail.com",
-    "url": "https://blog.mazey.net"
+    "url": "https://github.com/mazeyqian"
   },
   "license": "MIT",
   "bugs": {
