docs(pkg): update license

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "email": "mazeyqian@gmail.com",
     "url": "https://github.com/mazeyqian"
   },
-  "license": "MIT",
+  "license": "GPL-2.0",
   "bugs": {
     "url": "https://github.com/mazeyqian/webpack-build-demo/issues"
   },
