--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mazey-polestar",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A Demo for Webpack Build",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build:index": "cross-env ENTRY=index webpack --config webpack.config.prd.js",
     "build:wordpress": "cross-env ENTRY=wordpress webpack --config webpack.config.prd.js",
